kubernetes/ms-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ms-svc
spec:
  selector:
    app: microservice
  ports:
  - protocol: "TCP"
    port: 8080
    targetPort: 8080
